pdf naechste Schritte

--- a/Sopra/WebContent/login.xhtml
+++ b/Sopra/WebContent/login.xhtml
@@ -39,7 +39,7 @@
 							<h:link outcome="modulansicht">
 								<p:graphicImage value="/resources/images/html_logo.png" style=" margin-left: 15px; margin-right: 15px;"/>								
 							</h:link>
-							<h:link outcome="/resources/pdf_folder/modul.pdf" >
+							<h:link outcome="/modul.pdf" >
 								<p:graphicImage value="/resources/images/PDF_Logo.png" style=" margin-left: 15px; margin-right: 15px;"></p:graphicImage>
 							</h:link>
 						</p:treeNode>
