pdf weiter onwards

--- a/Sopra/WebContent/pdfansicht.xhtml
+++ b/Sopra/WebContent/pdfansicht.xhtml
@@ -14,7 +14,7 @@
 				<h1 class="ueberschrift">Pdf Download</h1>
 				<p>Hier k&ouml;nnen Sie die angeforderte Pdf - Datei herunterladen:</p>
 				<h:form id="form">
-					<p:media value="resources/pdf_folder/"></p:media>
+					<p:media value="resources/pdf_folder/modul.pdf"></p:media>
 					<p:commandButton value="Download" title="Download"
 						icon="ui-icon-arrowthick-1-s" ajax="false">
 						<p:fileDownload value="#{BaumstrukturBean.fileStreamedContent}" />
