--- a/Sopra/WebContent/login.xhtml
+++ b/Sopra/WebContent/login.xhtml
@@ -25,9 +25,10 @@
 						<p:treeNode type="hb_type">
 							<p:outputLabel value="Version vom #{node.zeitstempel}" id="lblNode2"
 								styleClass="baumaufbau"></p:outputLabel>
-							<h:link outcome="login">
-								<p:graphicImage value="/resources/images/PDF_Logo.png" style=" margin-left: 15px; margin-right: 15px;"/>								
-							</h:link>
+							<h:commandLink action="#{baumstrukturBean.downloadhb}" outcome="login">
+								<f:setPropertyActionListener target="#{baumstrukturBean.akthb}" value="#{node}" />
+								<p:graphicImage value="/resources/images/PDF_Logo.png" style=" margin-left: 15px; margin-right: 15px;"></p:graphicImage>
+							</h:commandLink>
 						</p:treeNode>
 						<p:treeNode type="fach_type">
 								<p:outputLabel value="#{node.fach}" id="lblNode3"
@@ -36,11 +37,12 @@
 						<p:treeNode type="modul_type">
 							<p:outputLabel value="#{node.modulname}" id="lblNode4"
 								styleClass="baumaufbau"></p:outputLabel>
+							<h:commandLink action="#{baumstrukturBean.download}" outcome="login">
+								<f:setPropertyActionListener target="#{baumstrukturBean.aktmodul}" value="#{node}" />
+								<p:graphicImage value="/resources/images/PDF_Logo.png" style=" margin-left: 15px; margin-right: 15px;"></p:graphicImage>
+							</h:commandLink>
 							<h:link outcome="modulansicht">
 								<p:graphicImage value="/resources/images/html_logo.png" style=" margin-left: 15px; margin-right: 15px;"/>								
-							</h:link>
-							<h:link outcome="/modul.pdf" >
-								<p:graphicImage value="/resources/images/PDF_Logo.png" style=" margin-left: 15px; margin-right: 15px;"></p:graphicImage>
 							</h:link>
 						</p:treeNode>
 					</p:tree>
