--- a/Sopra/WebContent/benutzerdatenAendern.xhtml
+++ b/Sopra/WebContent/benutzerdatenAendern.xhtml
@@ -27,22 +27,24 @@
 							<h:panelGroup styleClass="text-infoBenutzerAendern ueberschriftAufzaehlung">Name:</h:panelGroup>
 							<h:panelGroup layout="block" styleClass="eingabeDivBenutzerAendern"><h:inputText value="#{benutzerAendernBean.name}"></h:inputText></h:panelGroup>
 							<br class="naechsteZeile"/>
-							<h:panelGroup styleClass="text-infoBenutzerAendern ueberschriftAufzaehlung">altes Passwort:</h:panelGroup>
+							<h:panelGroup styleClass="text-infoBenutzerAendern ueberschriftAufzaehlung">altes Passwort:*</h:panelGroup>
 							<h:panelGroup layout="block" styleClass="eingabeDivBenutzerAendern"><h:inputSecret value="#{benutzerAendernBean.altespasswortEingabe}"></h:inputSecret></h:panelGroup>
 							<br class="naechsteZeile"/>
-							<h:panelGroup styleClass="text-infoBenutzerAendern ueberschriftAufzaehlung">neues Passwort:</h:panelGroup>
+							<h:panelGroup styleClass="text-infoBenutzerAendern ueberschriftAufzaehlung">neues Passwort:*</h:panelGroup>
 							<h:panelGroup layout="block" styleClass="eingabeDivBenutzerAendern"><h:inputSecret value="#{benutzerAendernBean.neuespasswort}"></h:inputSecret></h:panelGroup>
 							<br class="naechsteZeile"/>
-							<h:panelGroup styleClass="text-infoBenutzerAendern ueberschriftAufzaehlung">neues Passwort best&auml;tigen:</h:panelGroup>
+							<h:panelGroup styleClass="text-infoBenutzerAendern ueberschriftAufzaehlung">neues Passwort best&auml;tigen:*</h:panelGroup>
 							<h:panelGroup layout="block" styleClass="eingabeDivBenutzerAendern"><h:inputSecret value="#{benutzerAendernBean.neuespasswortBestaetigen}" ></h:inputSecret></h:panelGroup>
 							<br class="naechsteZeile"/>
-							<h:panelGroup styleClass="text-infoBenutzerAendern ueberschriftAufzaehlung">neue E-Mail:</h:panelGroup>
+							<h:panelGroup styleClass="text-infoBenutzerAendern ueberschriftAufzaehlung">neue E-Mail:*</h:panelGroup>
 							<h:panelGroup layout="block" styleClass="eingabeDivBenutzerAendern"><h:inputText value="#{benutzerAendernBean.email}"></h:inputText></h:panelGroup>
 							<br class="naechsteZeile2"/>
 							<br class="naechsteZeile2"/>
 							<h:panelGroup styleClass="text-infoBenutzerAendern ueberschriftAufzaehlung">Status:</h:panelGroup>
-							<h:panelGroup layout="block" styleClass="eingabeDivBenutzerAendern"><h:outputText styleClass="ueberschriftAufzaehlung" value="#{benutzerAendernBean.status}"></h:outputText></h:panelGroup>
+							<h:panelGroup layout="block" styleClass="eingabeDivBenutzerAendern"><h:outputText styleClass="ueberschriftAufzaehlung statusfarbe" value="#{benutzerAendernBean.status}"></h:outputText></h:panelGroup>
 							<br class="naechsteZeile2"/>
+							<br class="naechsteZeile2"/>
+							<h:panelGroup  layout="block" styleClass="eingabeDivBenutzerAendern statusfarbe">*Pflichtfeld</h:panelGroup>
 							<br class="naechsteZeile2"/>
 							<br class="naechsteZeile2"/>
 							<h:commandButton value="&Auml;ndern"  action="#{benutzerAendernBean.datenAendern}" styleClass = "buttonAnordnung"/>
