javadoc zu den klassen und einigen neuen Methoden

--- a/Sopra/WebContent/aenderungsverwaltungStudiendekan.xhtml
+++ b/Sopra/WebContent/aenderungsverwaltungStudiendekan.xhtml
@@ -68,7 +68,7 @@
 							<br class="naechsteZeile2" />
 
 							<h:button value="Abbrechen" outcome="login" />
-
+							</h:panelGroup>
 
 						</h:form>
 					</h:panelGroup>
