--- a/Sopra/WebContent/modulAendern1.xhtml
+++ b/Sopra/WebContent/modulAendern1.xhtml
@@ -39,7 +39,7 @@
 
 						
 							<h:form>
-<!-- Aktuelles Modul ändern -->							
+<!-- Aktuelles Modul aendern -->							
 								<h:panelGroup styleClass="text-infoBenutzerAnlegen ueberschriftAufzaehlung">Aktuelles Modul &auml;ndern:</h:panelGroup>
 								<h:panelGroup layout="block" styleClass="eingabeDivBenutzerAnlegen">
 									<h:selectOneMenu
@@ -60,13 +60,13 @@
 									action="#{modulAendernBean.ausgewaehltAktuell}"
 									value="Aktuelles Modul &Auml;ndern"
 									styleClass="buttonAnordnung" />
-	<!--  					hier stand ein h:form schließen -->
+	<!--  					hier stand ein h:form schlieï¿½en -->
 
 							<br class="naechsteZeile2" />
 							<br class="naechsteZeile2" />
 							<br class="naechsteZeile2" />
 
-	<!-- Altes Modul ändern -->
+	<!-- Altes Modul ï¿½ndern -->
 						<!--  	<h:form>  -->
 								<h:panelGroup styleClass="text-infoBenutzerAnlegen ueberschriftAufzaehlung">Altes Modul &auml;ndern:</h:panelGroup>
 								<h:panelGroup layout="block" styleClass="eingabeDivBenutzerAnlegen">
