--- a/Sopra/WebContent/stichtagSetzen.xhtml
+++ b/Sopra/WebContent/stichtagSetzen.xhtml
@@ -31,7 +31,9 @@
 							<h:outputText value="#{stichtagBean.stichtagStatus}"  rendered="#{stichtagBean.notStichtagErfolgreich}" style="color:red; font-size:12px;"></h:outputText>
 							<br />
 							<br class="naechsteZeile2"/>
-							<h:commandButton action="#{stichtagBean.updateStichtag}" value="Setzen"  styleClass = "buttonAnordnung"/>
+							<h:commandButton action="#{stichtagBean.updateStichtag}" value="Setzen"  styleClass = "buttonAnordnung">
+								<f:setPropertyActionListener target="#{userBean.stichtag}" value="#{stichtagBean.selectStichtag}"></f:setPropertyActionListener>
+							</h:commandButton>
 						    <h:button value="Abbrechen" outcome="login"/>
 						</h:form>    
 					</h:panelGroup>
