--- a/Sopra/WebContent/benutzerdatenAendern.xhtml
+++ b/Sopra/WebContent/benutzerdatenAendern.xhtml
@@ -10,7 +10,7 @@
 	
 	<ui:define name="seitenbereich">
 	   		<h:panelGroup layout="block" styleClass = "seitenbereich">
-			<h:panelGroup layout="block" styleClass = "hauptfenster">
+			<h:panelGroup layout="block" styleClass = "hauptfensterBenutzerdatenAendern">
 				<h1 class = "ueberschrift">Benutzerdaten &auml;ndern:</h1>
 				<h:panelGroup layout="block" styleClass="top-nav">
 				
