--- a/Sopra/WebContent/stellvertreterHinzufuegen.xhtml
+++ b/Sopra/WebContent/stellvertreterHinzufuegen.xhtml
@@ -14,7 +14,7 @@
 			<h:panelGroup layout="block" styleClass = "hauptfenster">
 			<h1 class = "ueberschrift">Stellvertreter hinzuf&uuml;gen</h1>
 				<h:panelGroup layout="block" styleClass="top-nav">
-					<h:panelGroup layout="block" styleClass = "loeschen"> 
+					<h:panelGroup layout="block" styleClass = "stellvertreter"> 
 						<h:form>
 							<h:selectManyCheckbox id="fehler" value="#{stellvertreterBean.selectedUsers}" required="true" readonly="false" 
 								requiredMessage="w&auml;hle mindenstens einen Stellvertreter aus" layout="pageDirection" styleClass="ueberschriftAufzaehlung">
